Fixed font size in tables being too large

--- a/src/main/resources/edu/qut/cab302/wehab/css/MainStyleSheet.css
+++ b/src/main/resources/edu/qut/cab302/wehab/css/MainStyleSheet.css
@@ -193,7 +193,6 @@
 .table-view .column-header .label {
     -fx-text-fill: #000000;
     -fx-alignment: CENTER_LEFT;
-    -fx-font-size: 20px;
 }
 
 .table-view .table-row-cell {
@@ -206,7 +205,6 @@
 .table-view .table-cell {
     -fx-text-fill: #000000;
     -fx-alignment: CENTER_LEFT;
-    -fx-font-size: 16px;
 }
 
 .table-row-cell:filled:selected {
