--- a/src/main/resources/edu/qut/cab302/wehab/css/MainStyleSheet_large.css
+++ b/src/main/resources/edu/qut/cab302/wehab/css/MainStyleSheet_large.css
@@ -187,7 +187,6 @@
 .table-view .column-header .label {
     -fx-text-fill: #000000;
     -fx-alignment: CENTER_LEFT;
-    -fx-font-size: 36px;
 }
 
 .table-view .table-row-cell {
@@ -200,7 +199,6 @@
 .table-view .table-cell {
     -fx-text-fill: #000000;
     -fx-alignment: CENTER_LEFT;
-    -fx-font-size: 20px;
 }
 
 .table-row-cell:filled:selected {
